--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
         
                     <div class="col-auto">
                       <label for="inputPassword2" class="visually-hidden"></label>
-                      <input type="text" class="form-control" id="inputPassword2" placeholder="Gioco" v-model="newGame">
+                      <input type="text" class="form-control" id="inputPassword2" placeholder="Gioco" v-model="newGame" @keyup.enter="addGame">
                       {{ newGame }}
                     </div>
                     <div class="col-auto">
-                      <button type="submit" class="btn btn-primary mb-3" @click="addGame">Inserisci nuovo gioco</button>
+                      <button type="text" class="btn btn-primary mb-3" @click="addGame">Inserisci nuovo gioco</button>
                     </div>
                   </form>
             </div>
