--- a/index.html
+++ b/index.html
@@ -14,15 +14,13 @@
         <div class="row">
             <div class="col-12 text-center fs-1">Tobolist</div>
             <ul class="col-12 d-flex justify-content-center pt-4" v-for="(item, index) in list" :key="index">
-                <li :class="item.done == true ? 'text-decoration-line-through' : ''">{{ item.text }} <button class="btn btn-danger" @click="removeItem(index)"><i class="fa-solid fa-xmark"></i></button></li>
+                <li :class="item.done == true ? 'text-decoration-line-through' : ''" @click="invertDone(index)" class="ciao">{{ item.text }} <button class="btn btn-danger" @click="removeItem(index)"><i class="fa-solid fa-xmark"></i></button></li>
             </div>
-            <div class="col-12">
+            <div class="col-12 d-flex justify-content-center">
                 <form class="row g-3" @submit.prevent>
         
                     <div class="col-auto">
-                      <label for="inputPassword2" class="visually-hidden"></label>
-                      <input type="text" class="form-control" id="inputPassword2" placeholder="Gioco" v-model="newGame" @keyup.enter="addGame">
-                      {{ newGame }}
+                      <input type="text" class="form-control" id="inputPassword2" placeholder="Gioco" v-model="newGame" >
                     </div>
                     <div class="col-auto">
                       <button type="text" class="btn btn-primary mb-3" @click="addGame">Inserisci nuovo gioco</button>
